# moto-auto

./: Cargo.toml  flake.nix
src/: main.rs
src/web/: mod.rs
src/web/api/: handlers.rs  mod.rs
src/web/api/tests/: mod.rs
src/web/front/: handlers.rs  mod.rs  views.rs
templates/admin/: base.html  header.html  user_edit.html  user_list.html
