[package]
name = "moto_auto_db"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = { version = "0.4.7", features = ["serde"] }
log = "0.4.22"
chrono = { version = "0.4.39", features = ["serde"] }
serde = "1.0.216"
sqlx = { version = "0.8.2", features = ["bigdecimal", "chrono", "postgres", "runtime-tokio-native-tls"] }
axum = "0.7.9" 
tokio = { version = "1.42.0", features = ["full"] }
askama =  "0.12.1" 
askama_axum = "0.4.0"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
